# boson-camera-test

./: .gitignore  README.md  cameratest.py  imageDiff.py  twoCameraStream.cpp
BosonUSB2/: BosonUSB2.cpp  CMakeLists.txt  README.md
BosonUSB2/ClientFiles_C/: CMakeLists.txt  Makefile  Serializer_BuiltIn.h  cmake_install.cmake
BosonUSB2/EmulatorFiles/: CMakeLists.txt  Makefile  cmake_install.cmake
basic-camera-functionality/: basic-camera-functionality.sln
basic-camera-functionality/basic-camera-functionality/: basic-camera-functionality.cpp  basic-camera-functionality.vcxproj  basic-camera-functionality.vcxproj.filters
boson-radiometric-test/: boson-radiometric-test.sln
boson-radiometric-test/boson-radiometric-test/: boson-radiometric-test.cpp  boson-radiometric-test.vcxproj  boson-radiometric-test.vcxproj.filters
ext/FlirBosonCalibration_UCF_20221219/FlirBosonCalibration/: FrameGrabber.h  ICIRtnErrors.h  icisdk_x64.lib
img/: 221013_raw16_0.tiff  221013_raw16_1.tiff  221017_raw16_3.tiff
linux-source-files/: BosonUSB.cpp  BosonUSB2.cpp  BosonUSB3.cpp  BosonUSBThread.cpp
